params调整